[project]
name = "rennes-traffic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.1",
    "flask-mail>=0.10.0",
    "flask-monitoringdashboard>=3.3.2",
    "numpy==1.26",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "tensorflow>=2.14.0",
]
